conteúdo inserido no html

--- a/09_especies_vegetais/index.html
+++ b/09_especies_vegetais/index.html
@@ -728,16 +728,332 @@
               <tr>
                 <td>
                   <img src="imgs/45manjericaao.jpg" class="center-block img-responsive">
-                  <p class="acessivel no-print">Aspecto pontiagudo e folhagens fechadas em formato cilíndrico, eretas, rígidas e lisas, de cor verde-escura a acinzentadas, com raias verde-claras.</p>
+                  <p class="acessivel no-print">Galhos com muitas ramificações, com suas folhas em formato oval na cor verde-clara.</p>
                 </td>
-                <td>Lança-de-são-jorge (<i>Sansevieria cylindrica</i>)</td>
-                <td>Não resiste ao encharcamento, apodrecendo rapidamente nessa condição.</td>
-                <td>Exótica (África)</td>
-                <td>Luz difusa, meia-sombra, sol pleno</td>
+                <td>Manjericão (<i>Ocimum basilicum</i>)</td>
+                <td>Cultivar em solo fértil, bem drenável, enriquecido com matéria orgânica e irrigado regularmente. Pode ser plantado em vasos.</td>
+                <td>Exótica (Ásia)</td>
+                <td>Sol pleno</td>
+              </tr>
+              <tr>
+                <td>
+                  <img src="imgs/46pimenta.jpg" class="center-block img-responsive">
+                  <p class="acessivel no-print">Caule lenhoso e ramificado. Folhas em forma de lança verde e com nervuras. Fruto cone na cor vermelha, amarela, verde, laranja ou violeta.</p>
+                </td>
+                <td>Pimenta (<i>Capsicum spp</i>)</td>
+                <td>Cultivar em solo fértil, profundo, leve, enriquecido com matéria orgânica e irrigado regularmente. Não tolera estiagem, encharcamento, frio ou geadas.</td>
+                <td>Exótica (América)</td>
+                <td>Meia-sombra, sol pleno</td>
+              </tr>
+              <tr>
+                <td>
+                  <img src="imgs/47alecrim.jpg" class="center-block img-responsive">
+                  <p class="acessivel no-print">Arbusto ramificado com hastes lenhosas e folhas filiformes pequenas e verdes.</p>
+                </td>
+                <td>Alecrim (<i>Rosmarinus officinalis</i>)</td>
+                <td>Cultivar em solo perfeitamente drenável. Adapta-se bem a solos pobres, arenosos e pedregosos.</td>
+                <td>Exótica (Europa)</td>
+                <td>Sol pleno</td>
+              </tr>
+              <tr>
+                <td>
+                  <img src="imgs/48saalvia.jpg" class="center-block img-responsive">
+                  <p class="acessivel no-print">Planta com caule lenhoso, folhas acinzentadas e flores azuis a violáceas.</p>
+                </td>
+                <td>Sálvia (<i>Salvia officinalis</i>)</td>
+                <td>Cultivar em solo drenável, neutro a levemente alcalino e enriquecido com matéria orgânica. Resiste ao frio, mas não tolera locais com inverno demasiadamente frio e úmido ao mesmo tempo.</td>
+                <td>Exótica (Europa, Mediterrâneo)</td>
+                <td>Meia-sombra, Sol pleno</td>
+              </tr>
+              <tr>
+                <td>
+                  <img src="imgs/49camomila.jpg" class="center-block img-responsive">
+                  <p class="acessivel no-print">Haste ereta, com folhas delgadas e pequenas flores brancas.</p>
+                </td>
+                <td>Sálvia (<i>Matricaria recutita</i>)</td>
+                <td>Cultivar em solo fértil, drenável, enriquecido com matéria orgânica e irrigado a intervalos regulares. Aprecia o clima ameno e não tolera o calor excessivo.</td>
+                <td>Exótica (Ásia, Europa)</td>
+                <td>Sol pleno</td>
+              </tr>
+              <tr>
+                <td>
+                  <img src="imgs/50salsa.jpg" class="center-block img-responsive">
+                  <p class="acessivel no-print">Caule curto e folhas pinadas, compostas por folíolos em formato de cunha, na coloração verde-intenso.</p>
+                </td>
+                <td>Salsa (<i>Petroselinum crispum</i>)</td>
+                <td>Cultivar em solo fértil, drenável, enriquecido com matéria orgânica e irrigado regularmente. Tolera frio e geadas, mas ressente-se com o calor intenso ou estiagem.</td>
+                <td>Exótica (África, Europa, Mediterrâneo, Tunísia)</td>
+                <td>Sol pleno</td>
+              </tr>
+              <tr>
+                <td>
+                  <img src="imgs/51Oregano.jpg" class="center-block img-responsive">
+                  <p class="acessivel no-print">Folhas pequenas, ovais, pontiagudas e quase na cor verde.</p>
+                </td>
+                <td>Orégano (<i>Origanum vulgare</i>)</td>
+                <td>Cultivar em solo fértil, bem drenável, enriquecido com matéria orgânica e irrigado a intervalos regulares. Resistente a curtos períodos de estiagem. </td>
+                <td>Exótica (Europa, Mediterrâneo)</td>
+                <td>Sol pleno</td>
+              </tr>
+              <tr>
+                <td>
+                  <img src="imgs/52 hortela.jpg" class="center-block img-responsive">
+                  <p class="acessivel no-print">Folhas opostas de formato oval e bordas serrilhadas, ponta aguda e base arredondada.</p>
+                </td>
+                <td>Hortelã (<i>Mentha sp</i>)</td>
+                <td>Rústica e de cultivo fácil. O solo deve ser fértil e enriquecido com matéria orgânica para uma boa produção. As regas devem ser regulares, deixando o solo permanentemente úmido, porém sem encharcamento. Tolera geadas.</td>
+                <td>Exótica (América do Norte, Ásia, Austrália)</td>
+                <td>Meia-sombra, sol pleno</td>
+              </tr>
+              <tr>
+                <td>
+                  <img src="imgs/53cebolinha.jpg" class="center-block img-responsive">
+                  <p class="acessivel no-print">Bulbos brancos e alongados. Folhas verdes, compridas e cilíndricas, como tubos ocos.</p>
+                </td>
+                <td>Cebolinha (<i>Allium fistulosum</i>)</td>
+                <td>Cultivar em solo fértil, bem preparado, enriquecido com matéria orgânica e irrigado regularmente. Adapta-se ao frio e ao calor, mas prefere o clima ameno.</td>
+                <td>Exótica (Ásia, China)</td>
+                <td>Sol pleno</td>
+              </tr>
+              <tr>
+                <td>
+                  <img src="imgs/54alho poro.jpg" class="center-block img-responsive">
+                  <p class="acessivel no-print">Folhas longas, largas, suculentas e verdes, com bainhas compridas. Falso caule tenro, branco e comestível, dilatado na base.</p>
+                </td>
+                <td>Alho poró (<i>Allium porrum</i>)</td>
+                <td>Cultivar em solo fértil, calado, leve e enriquecido com matéria orgânica. Irrigar regularmente.</td>
+                <td>Exótica (Europa)</td>
+                <td>Sol pleno</td>
               </tr>
             </tbody>
           </table>
         </div>
+        <h4>Forração</h4>
+        <div class="table-responsive">
+          <table class="senac">
+            <thead>
+              <th>Imagem</th>
+              <th>Tipos</th>
+              <th>Cuidados</th>
+              <th>Regionalidade</th>
+              <th>Luminosidade</th>
+            </thead>
+            <tbody>
+              <tr>
+                <td>
+                  <img src="imgs/55 hera.jpg" class="center-block img-responsive">
+                  <p class="acessivel no-print">Trepadeira com folhas verdes com manchas mais claras recortadas em formato de estrela. </p>
+                </td>
+                <td>Hera (<i>Hedera helix</i>)</td>
+                <td>Cultivada em solo fértil, bem drenável e enriquecido com matéria orgânica, irrigado periodicamente. Aprecia a umidade e o frio subtropical e não suporta solos encharcados. É tolerante a geadas.</td>
+                <td>Exótica (Europa África, Ásia, Ilhas Canárias)</td>
+                <td>Meia-sombra, sol pleno</td>
+              </tr>
+              <tr>
+                <td>
+                  <img src="imgs/56 peperomia.jpg" class="center-block img-responsive">
+                  <p class="acessivel no-print">Planta pendente com folhas delicadas em verde-claro e galhos dilatados.</p>
+                </td>
+                <td>Peperômia-filodendro (<i>Peperomia scandens</i>)</td>
+                <td>Cultivar em solo fértil, leve e enriquecido com matéria orgânica, com regas regulares. Não é tolerante a geadas. Aprecia o litoral.</td>
+                <td>Nativa</td>
+                <td>Luz difusa, meia-sombra</td>
+              </tr>
+              <tr>
+                <td>
+                  <img src="imgs/57 jiboia.jpg" class="center-block img-responsive">
+                  <p class="acessivel no-print">Trepadeira ornamental com folhas em formato de coração, nas cores verde ou verde rajada de amarelo e branco.</p>
+                </td>
+                <td>Jiboia (<i>Epipremnum pinnatum</i>)</td>
+                <td>Para ter uma folhagem sempre bonita e de crescimento rápido, deve ser plantada em substrato rico em matéria orgânica e receber regas periódicas.</td>
+                <td>Exótica (Ilhas Salomão, Oceania)</td>
+                <td>Luz difusa, meia-sombra, sol pleno</td>
+              </tr>
+              <tr>
+                <td>
+                  <img src="imgs/58 singonio.jpg" class="center-block img-responsive">
+                  <p class="acessivel no-print">Planta ornamental de coloração verde clara com nervuras brancas.</p>
+                </td>
+                <td>Singônio (<i>Syngonium angustatum</i>)</td>
+                <td>Cultivar em substrato rico em matéria orgânica. Aprecia a umidade e regas regulares. Não é tolerante ao frio.</td>
+                <td>Exótica (América Central)</td>
+                <td>Luz difusa, meia-sombra</td>
+              </tr>
+              <tr>
+                <td>
+                  <img src="imgs/59 clorofito.jpg" class="center-block img-responsive">
+                  <p class="acessivel no-print">Planta pequena com folhas verdes rajadas de branco, que parecem gramínea. </p>
+                </td>
+                <td>Clorofito  (<i>Chlorophytum comosum</i>)</td>
+                <td>Cultivar em solo fértil, rico em matéria orgânica, bem drenado e mantido úmido.</td>
+                <td>Exótica (África)</td>
+                <td>Pleno sol, meia-sombra</td>
+              </tr>
+              <tr>
+                <td>
+                  <img src="imgs/60 cineraria.jpg" class="center-block img-responsive">
+                  <p class="acessivel no-print">Folhagem em tons de cinza, esbranquiçada e de textura aveludada e recortada.</p>
+                </td>
+                <td>Cinerária marítima (<i>Senecio douglasii</i>)</td>
+                <td>Cultivar em solo fértil, rico em matéria orgânica e bem drenável. As regas devem ser regulares, mantendo o solo levemente úmido. Planta tolerante ao frio.</td>
+                <td>Exótica (América do Norte)</td>
+                <td>Sol pleno</td>
+              </tr>
+              <tr>
+                <td>
+                  <img src="imgs/61 lambari.jpg" class="center-block img-responsive">
+                  <p class="acessivel no-print">Hastes ramificadas, suculentas com folhas verde-arroxeadas com duas faixas prateadas brilhantes.</p>
+                </td>
+                <td>Lambari (<i>Tradescantia zebrina</i>)</td>
+                <td>Não tolera baixas temperaturas de inverno. A intensidade da cor é maior em contato direto com o sol.</td>
+                <td>Exótica (América do Norte)</td>
+                <td>Meia-sombra, luz difusa</td>
+              </tr>
+              <tr>
+                <td>
+                  <img src="imgs/62trapoeraba.jpg" class="center-block img-responsive">
+                  <p class="acessivel no-print">Hastes inclinadas, folhas de cor púrpura e flores pequenas na cor rosa-claro</p>
+                </td>
+                <td>Trapoeraba-roxa (<i>Tradescantia pallida purpurea</i>)</td>
+                <td>Cultivar em solo fértil e úmido composto de terra de jardim e terra vegetal. Exige ainda regas regulares e gosta de frio.</td>
+                <td>Exótica (América do Norte)</td>
+                <td>Meia-sombra, sol pleno</td>
+              </tr>
+              <tr>
+                <td>
+                  <img src="imgs/62trapoeraba.jpg" class="center-block img-responsive">
+                  <p class="acessivel no-print">Hastes inclinadas, folhas de cor púrpura e flores pequenas na cor rosa-claro</p>
+                </td>
+                <td>Trapoeraba-roxa (<i>Tradescantia pallida purpurea</i>)</td>
+                <td>Cultivar em solo fértil e úmido composto de terra de jardim e terra vegetal. Exige ainda regas regulares e gosta de frio.</td>
+                <td>Exótica (América do Norte)</td>
+                <td>Meia-sombra, sol pleno</td>
+              </tr>
+              <tr>
+                <td>
+                  <img src="imgs/63 grama preta.jpg" class="center-block img-responsive">
+                  <p class="acessivel no-print">Folhagem ornamental sem caule e com folhas finas, brilhantes e escuras.</p>
+                </td>
+                <td>Grama preta (<i>Ophiopogon japonicus</i>)</td>
+                <td>Não se desenvolve bem em climas frios com geadas, mas em regiões em que o inverno seja ameno. Tolerante ao calor e à seca.</td>
+                <td>Exótica (Ásia)</td>
+                <td>Meia-sombra, luz difusa</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <h4>Gramados</h4>
+        <div class="table-responsive">
+          <table class="senac">
+            <thead>
+              <th>Imagem</th>
+              <th>Tipos</th>
+              <th>Cuidados</th>
+              <th>Regionalidade</th>
+              <th>Luminosidade</th>
+            </thead>
+            <tbody>
+              <tr>
+                <td>
+                  <img src="imgs/64 grama esmeralda.jpg" class="center-block img-responsive">
+                  <p class="acessivel no-print">Gramínea baixa com folhas verde-claras, delicadas, lineares, estreitas, muito abundantes.</p>
+                </td>
+                <td>Grama-esmeralda (<i>Zoysia japonica</i>)</td>
+                <td>Rústica. Cultivar em solos férteis, com adubações semestrais e regas regulares. Não é indicada para locais de tráfego intenso, nem para áreas sombreadas.</td>
+                <td>Exótica (Ásia)</td>
+                <td>Sol pleno</td>
+              </tr>
+              <tr>
+                <td>
+                  <img src="imgs/65 grama sao carlos.jpg" class="center-block img-responsive">
+                  <p class="acessivel no-print">Gramínea baixa, com folhas largas, sem pelos, com um verde intenso.</p>
+                </td>
+                <td>Grama-são-carlos (<i>Axonopus compressus</i>)</td>
+                <td>Cultivar em solo fértil, com regas frequentes, pois não resiste à seca. Não tolera sombra total.</td>
+                <td>Nativa</td>
+                <td>Meia-sombra, sol pleno</td>
+              </tr> 
+              <tr>
+                <td>
+                  <img src="imgs/66 grama azul.jpg" class="center-block img-responsive">
+                  <p class="acessivel no-print">Folhas lineares, estreitas e macias, de coloração verde-escura azulada.</p>
+                </td>
+                <td>Grama-azul (<i>Poa pratensis</i>)</td>
+                <td>Cultivada em solos férteis, com adubações semestrais e regas regulares. É contraindicada para locais quentes, devendo ser usada em regiões serranas.</td>
+                <td>Exótica (África, Ásia, Europa)</td>
+                <td>Sol pleno</td>
+              </tr> 
+            </tbody>
+          </table>
+        </div>
+        <h4>Tendências</h4>
+        <p>Veja as plantas queridinhas do <i>urban jungle</i>, estilo de decoração que busca trazer a natureza para dentro dos lares de maneira harmoniosa e integrada à decoração.</p>
+        <div class="table-responsive">
+          <table class="senac">
+            <thead>
+              <th>Imagem</th>
+              <th>Tipos</th>
+              <th>Imagem</th>
+              <th>Tipos</th>
+            </thead>
+            <tbody>
+              <tr>
+                <td>
+                  <img src="imgs/55 hera.jpg" class="center-block img-responsive">
+                </td>
+                <td>Hera (<i>Hedera helix</i>)</td>
+                <td>
+                  <img src="imgs/37 espada sao jorge.jpg" class="center-block img-responsive">
+                </td>
+                <td>Espada-de-são-jorge (<i>Sansevieria trifasciata</i>)</td>
+              </tr>
+              <tr>
+                <td>
+                  <img src="imgs/56 peperomia.jpg" class="center-block img-responsive">
+                </td>
+                <td>Peperômia-filodendro (<i>Peperomia scandens</i>)</td>
+                <td>
+                  <img src="imgs/38 costela adao.jpg" class="center-block img-responsive">
+                </td>
+                <td>Costela-de-adão (<i>Monstera deliciosa</i>)</td>
+              </tr>
+              <tr>
+                <td>
+                  <img src="imgs/57 jiboia.jpg" class="center-block img-responsive">
+                </td>
+                <td>Jiboia (<i>Epipremnum pinnatum</i>)</td>
+                <td>
+                  <img src="imgs/39Samambaia-Americana.jpg" class="center-block img-responsive">
+                </td>
+                <td>Samambaia-americana (<i>Nephrolepis exaltata</i>)</td>
+              </tr>
+              <tr>
+                <td>
+                  <img src="imgs/10 camedorea.jpg" class="center-block img-responsive">
+                </td>
+                <td>Palmeira-camedórea (<i>Chamaedorea elegans</i>)</td>
+                <td>
+                  <img src="imgs/19Anturio.jpg" class="center-block img-responsive">
+                </td>
+                <td>Antúrio (<i>Anthurium andraeanum</i>)</td>
+              </tr>
+              <tr>
+                <td>
+                  <img src="imgs/11 rafis.jpg" class="center-block img-responsive">
+                </td>
+                <td>Palmeira-ráfis (<i>Rhapis excelsa</i>)</td>
+                <td>
+                  <img src="imgs/44begonia .jpg" class="center-block img-responsive">
+                </td>
+                <td>Begônia rex (<i>Begonia rex</i>)</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+
+        <h3>Encerramento</h3>
+        <p>Há inúmeras opções de plantas que podem ser aplicadas em projetos de jardinismo. Para explorar todas peculiaridades englobadas, é fundamental adquirir conhecimento sobre as espécies vegetais, o que pode ser obtido por experiência prática e pesquisa em bibliografias especializadas. </p>
+        <p>Assim, a classificação dos tipos de espécies vegetais é uma maneira de estudar a vegetação nos projetos de paisagismo de interiores, primeiramente se concentrando nos aspectos mais abrangentes, tais como porte, forma/volume, cores e texturas, e depois fazendo a especificação detalhada da espécie.</p>
       </div>
     </section>
     <!-- - - - - - - - - - - - - - - - não alterar abaixo- - - - - - - - - - - - -->
