ajustes layout conhecimento 1

--- a/01_design_passivo/index.html
+++ b/01_design_passivo/index.html
@@ -79,7 +79,7 @@
         <div id="sncload"></div>
       </div>
     </div>
-    <header id="topo" class="senac no-print">
+    <header id="topo" class="senac no-print ">
       <div class="header-tecnicos container">
         <h1 id="nome-curso">Design de interiores</h1>
         <div id="logo-senac">
@@ -89,7 +89,7 @@
       <div id="sombra"></div>
     </header>
     <div id="booklet" class="">
-      <header class="no-print container">
+      <header class="no-print container margem-botao">
         <!-- BTO IMPRIMIR -->
         <div class="grupo-imprimir no-print">
           <button
