--- a/03_industria/index.html
+++ b/03_industria/index.html
@@ -83,6 +83,7 @@
         <video></video>
         <h3>Encerramento</h3>
         <p>Neste conhecimento, você aprendeu como os processos fabris e a tecnologia moldaram o ambiente em que se vive. A indústria desempenha um papel importante na criação de móveis, acabamentos e elementos que integram os espaços projetados. Conhecendo essa trajetória, você será capaz de tomar decisões mais informadas na seleção de materiais, de mobiliário e de tecnologias para seus projetos de design de interiores. </p>
+        <img src="imgs/img_final.png" class="no-print img-responsive center-block" aria-hidden="true">
       </div>
     </section>
     <!-- - - - - - - - - - - - - - - - não alterar abaixo- - - - - - - - - - - - -->
