--- a/05_re-design_materiais/index.html
+++ b/05_re-design_materiais/index.html
@@ -92,13 +92,13 @@
                 <p class="hidden-sm hidden-xs">Antes de iniciar este conhecimento, é importante que você conheça a pronúncia correta dos termos em inglês que serão trabalhados. Aprender a pronunciar adequadamente essas palavras é fundamental para uma comunicação eficaz e uma compreensão completa do assunto. Ouça as pronúncias nos áudios a seguir:</p>
               </div>
               <div class="col-sm-5 col-xs-12">
-                <img src="imgs/elemento_1.png" class="elemento_dir img-responsive no-print hidden-xs" aria-hidden="true">
+                <img src="imgs/elemento_1.png" class="elemento_dir img-responsive  hidden-xs" aria-hidden="true">
               </div>
             </div>
             <p class="hidden-lg hidden-md">Antes de iniciar este conhecimento, é importante que você conheça a pronúncia correta dos termos em inglês que serão trabalhados. Aprender a pronunciar adequadamente essas palavras é fundamental para uma comunicação eficaz e uma compreensão completa do assunto. Ouça as pronúncias nos áudios a seguir:</p>
             
             <div class="destaque_links">
-              <img src="imgs/audio.png" class="img-pessoa hidden-xs">
+              <img src="imgs/audio.png" class="img-pessoa hidden-xs no-print">
               <i>Redesign:</i> <a href="https://pt.forvo.com/search/redesign/en_uk/" target="_blank">https://pt.forvo.com/search/redesign/en_uk/</a><br>
               <i>Upcycle:</i> <a href="https://pt.forvo.com/search/upcycle/" target="_blank">https://pt.forvo.com/search/upcycle/</a><br>
               <i>Retrofit:</i> <a href="https://pt.forvo.com/search/retrofit/en_usa/" target="_blank">https://pt.forvo.com/search/retrofit/en_usa/</a><br>
