atualização no layout

--- a/07_design_biofilico/index.html
+++ b/07_design_biofilico/index.html
@@ -109,7 +109,7 @@
                         </a>
                       </h3>
                     </div>
-                    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+                    <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                       <div class="panel-body">
                         A estratégia de conexão visual com a natureza é a mais efetiva delas, seja por meio da visualização da natureza a partir de uma paisagem externa, seja por meio de elementos naturais visíveis no ambiente. Na figura, a conexão visual se dá a partir da visualização de uma paisagem natural por uma grande abertura para o exterior e um leiaute que reforça a contemplação. 
                         <img src="imgs/Figura_1.jpg" class="center-block img-responsive hidden-sm hidden-xs" alt="A imagem mostra uma sala de estar com ampla vista exterior para o mar.">
@@ -335,7 +335,7 @@
                         </a>
                       </h3>
                     </div>
-                    <div id="collapse8" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading8">
+                    <div id="collapse8" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading8">
                       <div class="panel-body">
                         Como imagens da natureza é possível a utilização de vegetação permanente, fotografias, pinturas, papéis de parede, esculturas, murais, vídeos, simulações em computador e outros meios de representação. É importante que a imagem não seja única ou isolada, para não causar impacto, e preferencialmente tenha conexão com os usuários daquele espaço e/ou com o lugar. 
                         <img src="imgs/Figura_8.jpg" class="center-block img-responsive hidden-sm hidden-xs" alt="A imagem mostra um ambiente no qual o plano de fundo tem um quadro com a imagem de plantas aquáticas.">
@@ -522,7 +522,7 @@
                         </a>
                       </h3>
                     </div>
-                    <div id="collapse14" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading14">
+                    <div id="collapse14" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading14">
                       <div class="panel-body">
                         Panorama, ou prospect, é uma estratégia que consiste em fazer com que a pessoa percorra, ou seja estimulada a percorrer, um determinado caminho. Ela tem esse estímulo a partir de uma perspectiva que é dada a ela de algo interessante no final dessa caminhada, por exemplo. No entanto, é importante que a pessoa consiga de antemão visualizar tudo o que ela encontrará ao longo desse caminho, de forma que sinta controle e segurança do espaço a ser percorrido. São situações encontradas em átrios, varandas e patamares de escada, por exemplo.
                         <img src="imgs/Figura_14.jpg" class="center-block img-responsive hidden-sm hidden-xs" alt="A imagem mostra um ambiente no qual o plano de fundo tem um quadro com a imagem de plantas aquáticas.">
